--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-sanitize": "~1.3.6",
     "angular": "~1.3.6",
     "fontawesome": "~4.2.0",
-    "angular-touch": "~1.3.6"
+    "angular-touch": "~1.3.6",
+    "jquery": "~2.1.1"
   }
 }
