--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular": "~1.3.6",
     "fontawesome": "~4.2.0",
     "angular-touch": "~1.3.6",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-i18n": "~1.3.6"
   }
 }
