--- a/bower.json
+++ b/bower.json
@@ -16,13 +16,12 @@
     "tests"
   ],
   "dependencies": {
-    "angular-material": "~0.6.1",
-    "angular-route": "~1.3.6",
-    "angular-sanitize": "~1.3.6",
-    "angular": "~1.3.6",
-    "fontawesome": "~4.2.0",
-    "angular-touch": "~1.3.6",
-    "jquery": "~2.1.1",
-    "angular-i18n": "~1.3.6"
+    "angular-material": "master",
+    "angular-route": "~1.3",
+    "angular-sanitize": "~1.3",
+    "angular": "~1.3",
+    "angular-touch": "~1.3",
+    "angular-i18n": "~1.3",
+    "fontawesome": "~4.2"
   }
 }
