--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-touch": "~1.3",
     "angular-i18n": "~1.3",
     "fontawesome": "~4.2",
-    "angular-translatability": "~0.1.1"
+    "angular-translatability": "~0.1.1",
+    "fastclick": "~1.0.6"
   }
 }
